--- a/assets/dataset/visualize_virat_object_path.ipynb
+++ b/assets/dataset/visualize_virat_object_path.ipynb
@@ -9,12 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "DEFAULT_PATH           = '/media/dat/dataset/VIRAT'\n",
-    "EXAMPLE                = 'VIRAT_S_000200_06_001693_001824'\n",
+    "DEFAULT_PATH           = '/home/dat/Downloads/VIRAT'\n",
+    "EXAMPLE                = 'VIRAT_S_000200_00_000100_000171'\n",
     "\n",
     "# {0}: original video file name\n",
     "# {1}: chunk number\n",
@@ -29,8 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -43,8 +47,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "SELECTED_OBJECT_TYPE   = [ 2, 3]  # only pick pedastrian, car or vehicles\n",
@@ -55,8 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "DEFAULT_ANNOTATION_DIR = os.path.join(DEFAULT_PATH,'annotations')\n",
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +126,8 @@
      "output_type": "stream",
      "text": [
       "Object is not in selected object type\n",
-      "Number of annotated objects in the video 3\n"
+      "Object is not in selected object type\n",
+      "Number of annotated objects in the video 1\n"
      ]
     }
    ],
@@ -145,15 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Seltected 8 from: [8, 10, 7]\n",
-      "Number of required frames: 75\n"
+      "Seltected 2 from: [2]\n",
+      "Number of required frames: 2115\n"
      ]
     }
    ],
@@ -191,8 +200,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def generate_focused_area_mask(image, boxes_list, offset, color, thickness=5):\n",
@@ -251,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -323,14 +334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "75\n"
+      "2115\n"
      ]
     }
    ],
@@ -345,8 +356,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# # reshape into working format\n",
@@ -358,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -379,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
